# voice-stream

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  conftest.py  poetry.toml  pyproject.toml  test_logging_config.json
.github/: FUNDING.md  dependabot.yml
.github/actions/poetry_setup/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: _setup.yaml  _setup.yml  publish.yaml  publish.yml  tests.yaml  tests.yml
docs/: Makefile  build_reference.py  changelog.md  conf.py  gen_api_lists.py  index.md  index.rst  reference.md  stability.md
docs/_gen/: helpers.rst  sinks.rst  sources.rst  steps.rst
docs/_gen/integrations/: fastapi.rst  google.rst  google_utils.rst  langchain.rst  pypi_speech_recognition.rst  quart.rst  twilio.rst
docs/concepts/: index.md
docs/contributing/: approach.md  design.md  index.md  process.md
docs/cookbook/: browser.md  browser_client.md  desktop.md  index.md  interruptions.md  phone.md  recording.md  tips.md  voicemail.md
docs/getting_started/: index.md  walkthrough.md
docs/reference/: index.md
examples/: audio_ws.js  browser.py  example_events.py  quickstart.py  serve_text_chat.py
examples/fastapi_testing_app/: README.md  chain.py  main.py  requirements.txt  setup_recognizer.py
examples/fastapi_testing_app/templates/: index.html
examples/gpt_gemini_showdown/: README.md  chat_flow.py  gemini_timing.py  gpt4_gemini_panel.py  gpt4_gemini_panel_test.py  main.py  requirements.txt
examples/gpt_gemini_showdown/templates/: index.html
examples/llm_testing_app/: .env.example  README.md  chain.py  main.py  quart_ngrok.py  requirements.txt  serve_text_chat.py
examples/llm_testing_app/templates/: index.html  twiml.xml
examples/static/: audio_ws.js
examples/twilio/: .env.example  README.md  main.py  requirements.txt
pages/: audio_ws.js
tests/: conftest.py  helpers.py  test_basic_streams.py
tests/examples/: longer.webm  splittable.webm  testing.webm
tests/integration_tests/integrations/: temp.py  test_google.py  test_google_streams.py  test_langchain.py  test_langchain_streams.py  test_speech_recognition.py  test_speech_recognition_streams.py
tests/resources/: echo.ndjson
tests/unit_tests/: test_basic_streams.py  test_core.py  test_speech_to_text.py  test_speech_to_text_streams.py  test_substreams.py  test_text_to_speech.py  test_text_to_speech_streams.py
tests/unit_tests/audio/: test_audio_mp3.py  test_audio_ops.py  test_audio_streams.py  test_audio_webm.py
tests/unit_tests/integrations/: example_chains.py  test_langchain_unit.py  test_twilio.py  test_twilio_streams.py
tests/unit_tests/langchain_extensions/: test_pydantic.py
voice_stream/: __init__.py  _queue_with_exception.py  _substream_iters.py  basic_streams.py  core.py  events.py  quart_streams.py  queue_with_exception.py  serve_text_chat.py  speech_to_text.py  speech_to_text_streams.py  substreams.py  text_to_speech.py  text_to_speech_streams.py  types.py
voice_stream/audio/: __init__.py  async_wav_file.py  audio.py  audio_mp3.py  audio_ogg.py  audio_ops.py  audio_streams.py  audio_utils.py  audio_webm.py  audio_webm_junk.py
voice_stream/integrations/: _google_endless.py  fastapi.py  fastapi_streams.py  google.py  google_setup.py  google_streams.py  google_utils.py  langchain.py  langchain_streams.py  pypi_speech_recognition.py  quart.py  speech_recognition_streams.py  twilio.py  twilio_streams.py
voice_stream/langchain_extensions/: memory.py  parsers.py  pydantic.py  runnables.py
