[tool.poetry]
name = "voice-stream"
version = "v0.0.0"
description = "A streaming library for creating voice bots using LLMs.  Connects LLMs to speech recognition and speech synthesis APIs."
authors = ["Dave DeCaprio <daved@alum.mit.edu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/DaveDeCaprio/voice-stream"
documentation = "https://voice-stream.readthedocs.io/"
keywords = ["voicebot", "genai", "twilio", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Conferencing",
    "Topic :: Communications :: Telephony",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = ">=22.1.0"
langchain = ">=0.0.333"
mutagen = ">=1.44.0"
pydantic = ">=2.2.0"
asyncstdlib = ">=3.9.0"
google-cloud-speech = { version = ">=2.21.0", optional = true }
google-cloud-texttospeech = { version = ">=2.13.0", optional = true }
langchain-google-genai = { version = ">=0.0.2", optional = true }
twilio = { version = ">=7.0.0", optional = true }
tiktoken = { version = ">=0.3.3", optional = true }
openai = { version = ">=1.7.2", optional = true }
quart = { version = ">=0.18.0", optional = true }
pyaudio = {version = ">=0.2.12", optional = true}
fastapi = {version = ">=0.100.0", optional = true}
vosk = {version = ">=0.3.42", optional = true}
#grpcio = {version = ">=1.30.0", optional = true}
google-cloud-aiplatform = {version = ">=1.38.0", optional = true}
uvicorn = {version = ">=0.19.0", optional = true}
websockets = {version = ">=10.0", optional = true}
langchain-openai = {version = ">=0.0.2", optional = true}

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.4"
pytest-asyncio = ">=0.23.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2023.9.10"
sphinxext-opengraph = "^0.9.1"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2021.3.14"
protobuf = ">=4.21.6" # Added to address build issues with readthedocs.
cffi = ">=1.10.0" # Added to address build issues with readthedocs. pyo3_runtime.PanicException: Python API call failed

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
python-dotenv = "^1.0.0"


[tool.poetry.extras]
openai = ["openai", "tiktoken", "langchain-openai"]
twilio = ["twilio"]
google = ["google-cloud-speech", "google-cloud-texttospeech", "google-cloud-aiplatform", "langchain-google-genai"]
quart = ["quart"]
quickstart = ["fastapi", "uvicorn", "websockets", "google-cloud-speech", "google-cloud-texttospeech", "langchain-google-genai", "google-cloud-aiplatform"]

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[tool.pytest.ini_options]
log_level="DEBUG"
log_cli=false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
